updating the patch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ list (APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
 set (CONF_DIR "/etc/lightdm")
 set (DATADIR "${CMAKE_INSTALL_PREFIX}/share")
-set (PKGDATADIR "${DATADIR}/pantheon-greeter")
+set (PKGDATADIR "${DATADIR}/lightdm-pantheon-greeter")
 set (CMAKE_INSTALL_PREFIX /usr)
 set (VERSION "3.1.1")
 
@@ -93,10 +93,10 @@ include (GSettings)
 include (GResource)
 glib_compile_resources (GLIB_RESOURCES_CSS SOURCE data/css.gresource.xml)
 
-add_executable (pantheon-greeter ${VALA_C} ${GLIB_RESOURCES_CSS})
-target_link_libraries(pantheon-greeter m)
+add_executable (lightdm-pantheon-greeter ${VALA_C} ${GLIB_RESOURCES_CSS})
+target_link_libraries(lightdm-pantheon-greeter m)
 
-install (TARGETS pantheon-greeter RUNTIME DESTINATION sbin)
-install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/pantheon-greeter.desktop DESTINATION share/xgreeters)
-install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/pantheon-greeter.conf DESTINATION ${CONF_DIR})
+install (TARGETS lightdm-pantheon-greeter RUNTIME DESTINATION sbin)
+install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/lightdm-pantheon-greeter.desktop DESTINATION share/xgreeters)
+install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/lightdm-pantheon-greeter.conf DESTINATION ${CONF_DIR})
 install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/fingerprint.svg DESTINATION ${PKGDATADIR})
