--- a/data/lightdm-pantheon-greeter.desktop
+++ b/data/lightdm-pantheon-greeter.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Pantheon Greeter
 Comment=Pantheon Greeter
-Exec=pantheon-greeter
+Exec=lightdm-pantheon-greeter
 Type=Application
 X-Ubuntu-Gettext-Domain=pantheon-greeter
-Name[en_US]=pantheon-greeter
+Name[en_US]=lightdm-pantheon-greeter
